--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@uilib/custom-redux",
-  "version": "1.0.0",
+  "name": "custom-redux",
+  "version": "0.0.1",
   "description": "A lightweight custom Redux-like state management library for React",
   "type": "module",
   "main": "dist/index.cjs",
